--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "mern",
+  "name": "inventory",
   "version": "0.1.0",
-  "description": "Mern Demo",
+  "description": "inventory",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14"
   },
   "scripts": {
