--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "inventory",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "inventory",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -15,12 +15,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
+    "concurrently": "^3.6.1",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.15.4",
-    "if-env": "^1.0.4"
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
+    "path": "^0.12.7",
+    "sequelize": "^4.39.0"
   }
 }
