--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
     "path": "^0.12.7",
-    "sequelize": "^4.39.0"
+    "sequelize": "^4.39.0",
+    "sequelize-cli": "^4.1.1"
   }
 }
