--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
     "path": "^0.12.7",
