--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "if-env": "^1.0.4",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react-materialize": "^2.4.6",
     "sequelize": "^4.39.0",
