--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "express-mysql-session": "^2.0.1",
+    "express-sequelize-session": "^0.4.0",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
     "morgan": "^1.9.1",
